[package]
name = "starling"
version = "2.5.3"
authors = ["Josiah Evans <koreanhalo@gmail.com>"]
description = "This tree structure is a binary merkle tree with branch compression via split indexes."
repository = "https://github.com/ChosunOne/merkle_bit"
keywords = ["binary", "merkle", "tree", "patricia"]
categories = ["data-structures", "memory-management"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.bench]
debug = true
opt-level = 3
lto = true

[profile.test]
debug = true

[dev-dependencies]
criterion = "0.2.11"
rand = "0.6.5"

[dependencies]
bincode = { version = "1.1.3", optional = true }
blake2-rfc = { version = "0.2.18", optional = true }
serde = { version = "1.0.90", features = ["derive"], optional = true }
serde_json = { version = "1.0.39", optional = true }
serde_cbor = { version = "0.9.0", optional = true }
serde_yaml = { version = "0.8.9", optional = true }
serde-pickle = { version = "0.5.0", optional = true }
ron = { version = "0.5.1", optional = true }
groestl = { version = "0.8.0", optional = true }
openssl = { version = "0.10.21", optional = true }
tiny-keccak = { version = "1.4.2", optional = true }
hashbrown = { version = "0.3.0", optional = true }
rocksdb = { version = "0.12.2", optional = true }
seahash = { version = "3.0.6", optional = true }
fxhash = { version = "0.2.1", optional = true }
rand = {version = "0.6.5", optional = true }

[features]
use_serialization = []
use_serde = ["serde", "use_serialization"]
use_bincode = ["use_serde", "bincode"]
use_json = ["use_serde", "serde_json"]
use_cbor = ["use_serde", "serde_cbor"]
use_yaml = ["use_serde", "serde_yaml"]
use_pickle = ["use_serde", "serde-pickle"]
use_ron = ["use_serde", "ron"]

use_blake2b = ["blake2-rfc"]
use_groestl = ["groestl"]
use_sha2 = ["openssl"]
use_sha3 = ["tiny-keccak"]
use_keccak = ["tiny-keccak"]
use_seahash = ["seahash"]
use_fx = ["fxhash"]

use_hashbrown = ["hashbrown"]

use_rocksdb = ["rocksdb"]

use_rand = ["rand"]

[[bench]]
name = "merkle_bit_benches"
harness = false

[[bench]]
name = "big_benches"
harness = false

[[bin]]
name = "insert_benchmark"
path = "src/bin/insert_benchmark.rs"
required-features = ["use_rand"]
