[package]
name = "starling"
version = "3.2.1"
authors = ["Josiah Evans <koreanhalo@gmail.com>"]
description = "This tree structure is a binary merkle tree with branch compression via split indexes."
repository = "https://github.com/ChosunOne/merkle_bit"
keywords = ["binary", "sparse", "merkle", "tree", "patricia"]
categories = ["data-structures", "memory-management"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.bench]
debug = true
opt-level = 3
lto = true

[profile.test]
debug = true

[dev-dependencies]
criterion = "0.3.2"
rand = "0.7.3"

[dependencies]
bincode = { version = "1.2.1", optional = true }
blake2-rfc = { version = "0.2.18", optional = true }
serde = { version = "1.0.106", features = ["derive"], optional = true }
serde_json = { version = "1.0.51", optional = true }
serde_cbor = { version = "0.11.1", optional = true }
serde_yaml = { version = "0.8.11", optional = true }
serde-pickle = { version = "0.6.0", optional = true }
ron = { version = "0.5.1", optional = true }
groestl = { version = "0.9.0", optional = true }
openssl = { version = "0.10.29", optional = true }
tiny-keccak = { version = "2.0.2", optional = true, features = ["sha3", "keccak"] }
hashbrown = { version = "0.7.2", optional = true }
rocksdb = { version = "0.14.0", optional = true }
seahash = { version = "4.0.0", optional = true }
fxhash = { version = "0.2.1", optional = true }
rand = { version = "0.7.3", optional = true }
digest = { version = "0.8.1", optional = true }
blake2 = { version = "0.8.1", optional = true }
md2 = { version = "0.8.0", optional = true }
md4 = { version = "0.8.0", optional = true }
md-5 = { version = "0.8.0", optional = true }
ripemd160 = { version = "0.8.0", optional = true }
ripemd320 = { version = "0.8.0", optional = true }
sha-1 = { version = "0.8.2", optional = true }
sha2 = { version = "0.8.1", optional = true }
sha3 = { version = "0.8.2", optional = true }
whirlpool = { version = "0.8.1", optional = true }

[features]
use_serialization = []
use_serde = ["serde", "use_serialization"]
use_bincode = ["use_serde", "bincode"]
use_json = ["use_serde", "serde_json"]
use_cbor = ["use_serde", "serde_cbor"]
use_yaml = ["use_serde", "serde_yaml"]
use_pickle = ["use_serde", "serde-pickle"]
use_ron = ["use_serde", "ron"]

use_digest = ["digest"]

use_blake2b_rfc = ["blake2-rfc"]
use_groestl = ["groestl", "use_digest"]
use_sha2 = ["openssl"]
use_sha3 = ["tiny-keccak"]
use_keccak = ["tiny-keccak"]
use_seahash = ["seahash"]
use_fx = ["fxhash"]
use_blake2b = ["blake2", "use_digest"]
use_md2 = ["md2", "use_digest"]
use_md4 = ["md4", "use_digest"]
use_md5 = ["md-5", "use_digest"]
use_ripemd160 = ["ripemd160", "use_digest"]
use_ripemd320 = ["ripemd320", "use_digest"]
use_sha1 = ["sha-1", "use_digest"]
use_rust_sha2 = ["sha2", "use_digest"]
use_rust_sha3 = ["sha3", "use_digest"]
use_rust_keccak = ["sha3", "use_digest"]
use_whirlpool = ["whirlpool", "use_digest"]

use_hashbrown = ["hashbrown"]

use_rocksdb = ["rocksdb"]

use_rand = ["rand"]

[[bench]]
name = "merkle_bit_benches"
harness = false

[[bench]]
name = "big_benches"
harness = false

[[bin]]
name = "insert_benchmark"
path = "src/bin/insert_benchmark.rs"
required-features = ["use_rand"]
