[package]
name = "starling"
version = "4.0.0"
authors = ["Josiah Evans <chosunone@protonmail.com>"]
description = "This tree structure is a binary merkle tree with branch compression via split indexes."
repository = "https://github.com/ChosunOne/merkle_bit"
keywords = ["binary", "sparse", "merkle", "tree", "patricia"]
categories = ["data-structures", "memory-management", "algorithms"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.bench]
debug = true
opt-level = 3
lto = true

[profile.test]
debug = true

[dev-dependencies]
criterion = "0.4.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[dependencies]
bincode = { version = "1.3.3", optional = true }
blake2-rfc = { version = "0.2.18", optional = true }
serde = { version = "1.0.138", features = ["derive"], optional = true }
serde_json = { version = "1.0.82", optional = true }
ciborium = { version = "0.2.0", optional = true }
serde_yaml = { version = "0.8.24", optional = true }
serde-pickle = { version = "1.1.1", optional = true }
ron = { version = "0.7.1", optional = true }
groestl = { version = "0.10.1", optional = true }
openssl = { version = "0.10.40", optional = true }
tiny-keccak = { version = "2.0.2", optional = true, features = ["sha3", "keccak"] }
hashbrown = { version = "0.12.1", optional = true }
rocksdb = { version = "0.18.0", optional = true }
seahash = { version = "4.1.0", optional = true }
fxhash = { version = "0.2.1", optional = true }
rand = { version = "0.8.5", optional = true }
digest = { version = "0.10.3", optional = true }
blake2 = { version = "0.10.4", optional = true }
md2 = { version = "0.10.1", optional = true }
md4 = { version = "0.10.1", optional = true }
md-5 = { version = "0.10.1", optional = true }
ripemd = { version = "0.1.1", optional = true }
sha-1 = { version = "0.10.0", optional = true }
sha2 = { version = "0.10.2", optional = true }
sha3 = { version = "0.10.1", optional = true }
whirlpool = { version = "0.10.1", optional = true }

[features]
bincode = ["serde", "dep:bincode"]
json = ["serde", "serde_json"]
cbor = ["serde", "ciborium"]
yaml = ["serde", "serde_yaml"]
pickle = ["serde", "serde-pickle"]
ron = ["serde", "dep:ron"]

groestl = ["dep:groestl", "digest"]
sha2 = ["openssl"]
sha3 = ["tiny-keccak"]
keccak = ["tiny-keccak"]
blake2b = ["blake2", "digest"]
md2 = ["dep:md2", "digest"]
md4 = ["dep:md4", "digest"]
md5 = ["md-5", "digest"]
ripemd160 = ["dep:ripemd", "digest"]
ripemd320 = ["dep:ripemd", "digest"]
sha1 = ["sha-1", "digest"]
rust_sha2 = ["dep:sha2", "digest"]
rust_sha3 = ["dep:sha3", "digest"]
rust_keccak = ["dep:sha3", "digest"]
whirlpool = ["dep:whirlpool", "digest"]

[[bench]]
name = "merkle_bit_benches"
harness = false

[[bench]]
name = "big_benches"
harness = false

[[bin]]
name = "insert_benchmark"
path = "src/bin/insert_benchmark.rs"
required-features = ["rand"]
